# dazg-orbit-secure-inference-repro

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE_NOTICE.md  MANIFEST.sha256  Makefile  NOTICE_UPSTREAM.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_LOCK.json  reproduce.sh  requirements-oracle.txt  requirements.txt
Datatype/: CMakeLists.txt
Datatype/include/Datatype/: Tensor.h  UnifiedType.h
Datatype/src/: test.cpp
HE/: CMakeLists.txt
HE/include/HE/: HE.h  NetIO.h
HE/include/HE/tfhe/: BFEGeLUClear.h  BFELutEncoder.h  BFEReLUClear.h  BootstrapKey.h  DAZGRLut.h  GLWE.h  Gadget.h  LWE.h  PBS.h  Params.h  Torus32.h
HE/include/HE/unified/: PhantomWrapper.h  UnifiedCiphertext.h  UnifiedContext.h  UnifiedEncoder.h  UnifiedEvaluator.h  UnifiedEvk.h  UnifiedPlaintext.h
HE/src/: NetIO.cpp  PhantomWrapper.cpp  UnifiedEvaluator.cpp  UnifiedHE.cpp
HE/src/tfhe/: BFEGeLUClear.cpp  BFELutEncoder.cpp  BFEReLUClear.cpp  DAZGRLut.cpp
Layer/LinearLayer/: CMakeLists.txt
Layer/LinearLayer/include/LinearLayer/: BatchNorm.h  CirLinear.h  Conv.h  Linear.h  MatCheetah.h
Layer/LinearLayer/src/: BatchNorm.cpp  CirConv.cpp  CirLinear.cpp  Conv.cpp  ConvCheetah.cpp  ConvNest.cpp  Linear.cpp  Stage1StaticConv.cpp  Stage2StaticConv.cpp  settings.json
Layer/NonlinearLayer/: CMakeLists.txt
Layer/NonlinearLayer/include/: DAZGGeLU.h
Layer/NonlinearLayer/include/NonlinearLayer/: GeLU.h  Pool.h  ReLU.h  SiLU.h  TFHEGeLU.h  TFHEReLUProtocol.h  TFHESelector.h
Layer/NonlinearLayer/src/: ReLU.cpp  TFHEGeLU.cpp
Model/: CMakeLists.txt
Model/include/Model/: BlockScheduler.h  Primitive.h  ResNet.h
Model/src/: ResNet.cpp
OT/: CMakeLists.txt
OT/OTPrimitive/: CMakeLists.txt
OT/OTPrimitive/include/OTPrimitive/: cf2_ot_pack.h  cheetah_ot_pack.h  co.h  (+13 more)
OT/OTPrimitive/src/: OT.cpp
OT/OTProtocol/: CMakeLists.txt
OT/OTProtocol/src/: aux-protocols.cpp  comp.cpp  trunction.cpp
Operator/LinearOperator/: CMakeLists.txt
Operator/LinearOperator/src/: Conversion.cpp  Polynomial.cpp
Operator/NonlinearOperator/: CMakeLists.txt
Utils/: CMakeLists.txt  dazg_orbit_domain_planner.h
Utils/include/Utils/: CyclicNTT.h  ThreadPool.h  aes-ni.h  aes_opt.h  block.h  ccrf.h  constants.h  dazg_orbit_ablation_flags.h  dazg_orbit_certact_fuse.h  dazg_orbit_config.h  dazg_orbit_dazg_orbit_topline_v23.h  dazg_orbit_dazg_orbit_topline_v25.h  dazg_orbit_dazg_variant.h  dazg_orbit_determinism.h  dazg_orbit_domain_planner.h  dazg_orbit_fanoutburst_v20.h  dazg_orbit_fanoutburst_v31.h  dazg_orbit_graph_canonical_filter.h  dazg_orbit_latent_domain.h  dazg_orbit_numeric_verifier.h  dazg_orbit_profiler.h  dazg_orbit_scatterlift_v7.h  dazg_orbit_scatterlift_v8.h  dazg_orbit_scatterlift_v9.h  dazg_orbit_thunderact_v19e.h  dazg_orbit_trunclift_v4.h  emp-tool.h  file_io_channel.h  group.h  group_openssl.h  hash.h  io_channel.h  mitccrh.h  net_io_channel.h  performance.h  prg.h  ubuntu_terminal_colors.h  utils.h
Utils/src/: CyclicNTT.cpp  utils.cpp
experiments/n100_checkpoint013/: CMakeLists.txt  ORACLE_CLOSURE.json  PACKAGE_INFO.json  SECURITY_BOUNDARY.md  VALIDATION_REPORT.json
experiments/n100_checkpoint013/src/: dazg_checkpoint013_n100_executor.cpp  stage_s_contract_test.cpp
experiments/n100_checkpoint013/tools/: pair_runner.py  preflight.py  run_n100.py  run_stage_s_contract.py
experiments/n10_p60/: CMakeLists.txt  P60_BASELINE_CHECK.json  P60_FULL_RESULT_GATE.json  PAYLOAD_MANIFEST.json  install_manifest.json  pair_runner.py  run_v720.py  run_v720.sh  score_v720.py  source_marker.txt  watchdog.py
experiments/n10_p60/assets/: 001_stem.0.weight.0.weight.q16.u64.npy  002_stem.0.bias.0.bias.q16.u64.npy  003_stem.2.conv.weight.2.conv.weight.q16.u64.npy  004_stem.2.conv.bias.2.conv.bias.q16.u64.npy  005_stem.3.net.0.conv.weight.3.net.0.conv.weight.q16.u64.npy  006_stem.3.net.0.conv.bias.3.net.0.conv.bias.q16.u64.npy  007_stem.3.net.3.conv.weight.3.net.3.conv.weight.q16.u64.npy  008_stem.3.net.3.conv.bias.3.net.3.conv.bias.q16.u64.npy  009_h32.0.body.0.weight.0.body.0.weight.q16.u64.npy  010_h32.0.body.0.bias.0.body.0.bias.q16.u64.npy  011_h32.0.body.3.conv.weight.0.body.3.conv.weight.q16.u64.npy  012_h32.0.body.3.conv.bias.0.body.3.conv.bias.q16.u64.npy  013_h32.0.anchor.net.0.conv.weight.0.anchor.net.0.conv.weight.q16.u64.npy  014_h32.0.anchor.net.0.conv.bias.0.anchor.net.0.conv.bias.q16.u64.npy  015_h32.0.anchor.net.3.conv.weight.0.anchor.net.3.conv.weight.q16.u64.npy  016_h32.0.anchor.net.3.conv.bias.0.anchor.net.3.conv.bias.q16.u64.npy  017_h32.1.net.0.conv.weight.1.net.0.conv.weight.q16.u64.npy  018_h32.1.net.0.conv.bias.1.net.0.conv.bias.q16.u64.npy  019_h32.1.net.3.conv.weight.1.net.3.conv.weight.q16.u64.npy  020_h32.1.net.3.conv.bias.1.net.3.conv.bias.q16.u64.npy  021_to_h16.main.0.weight.main.0.weight.q16.u64.npy  022_to_h16.main.0.bias.main.0.bias.q16.u64.npy  023_to_h16.main.3.conv.weight.main.3.conv.weight.q16.u64.npy  025_to_h16.skip.weight.skip.weight.q16.u64.npy  026_to_h16.skip.bias.skip.bias.q16.u64.npy  027_to_h16.tail.net.0.conv.weight.tail.net.0.conv.weight.q16.u64.npy  028_to_h16.tail.net.0.conv.bias.tail.net.0.conv.bias.q16.u64.npy  029_to_h16.tail.net.3.conv.weight.tail.net.3.conv.weight.q16.u64.npy  030_to_h16.tail.net.3.conv.bias.tail.net.3.conv.bias.q16.u64.npy  031_h16.0.body.0.weight.0.body.0.weight.q16.u64.npy  032_h16.0.body.0.bias.0.body.0.bias.q16.u64.npy  033_h16.0.body.3.conv.weight.0.body.3.conv.weight.q16.u64.npy  034_h16.0.body.3.conv.bias.0.body.3.conv.bias.q16.u64.npy  035_h16.0.anchor.net.0.conv.weight.0.anchor.net.0.conv.weight.q16.u64.npy  036_h16.0.anchor.net.0.conv.bias.0.anchor.net.0.conv.bias.q16.u64.npy  037_h16.0.anchor.net.3.conv.weight.0.anchor.net.3.conv.weight.q16.u64.npy  038_h16.0.anchor.net.3.conv.bias.0.anchor.net.3.conv.bias.q16.u64.npy  039_h16.1.net.0.conv.weight.1.net.0.conv.weight.q16.u64.npy  040_h16.1.net.0.conv.bias.1.net.0.conv.bias.q16.u64.npy  041_h16.1.net.3.conv.weight.1.net.3.conv.weight.q16.u64.npy  (+38 more)
experiments/n10_p60/src/: qahl_v720_to_h8_exact_executor.cpp
(+182 files in other folders)
